# instagrep

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  printer.rs  types.rs  utils.rs  walker.rs
src/index/: builder.rs  incremental.rs  mod.rs  query.rs  storage.rs
tests/: integration_test.rs
