[package]
name = "instagrep"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Instant Grep — blazing-fast regex search via sparse n-gram inverted index. Open-source reimplementation of Cursor's Fast Regex Search with built-in MCP server for AI coding tools."
license = "MIT"
repository = "https://github.com/thestarharsh/instagrep"
homepage = "https://github.com/thestarharsh/instagrep"
keywords = ["grep", "search", "index", "regex", "ngram"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

default-run = "instagrep"

[[bin]]
name = "instagrep"
path = "src/main.rs"

[[bin]]
name = "instagrep-mcp"
path = "src/bin/instagrep_mcp.rs"
required-features = ["mcp"]

[features]
default = []
mcp = ["rmcp", "tokio", "schemars"]

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
regex-syntax = "0.8"
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
bincode = "1"
git2 = "0.19"
rayon = "1"
ignore = "0.4"
tempfile = "3"
fs2 = "0.4"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
serde_json = "1"

# MCP server (optional)
rmcp = { version = "1", features = ["server", "macros", "transport-io"], optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"], optional = true }
schemars = { version = "0.8", optional = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
